--- a/pages/login.html
+++ b/pages/login.html
@@ -24,21 +24,21 @@
     <div class="main_div">
       <div class="innerDiv">
         <div class="heading_Sign">
-          <h1>SIGN UP</h1>
+          <h1>SIGN IN</h1>
         </div>
         <input type="text" placeholder="Enter Your Name" />
         <input type="email" placeholder="Enter Your Email" />
         <input type="password" placeholder="Enter Your Password" />
         <button class="my_btn" type="submit">
           <i class="fa-solid fa-right-to-bracket"></i>
-          SignUp
+          SignIn
         </button>
         <button class="my_btn1" type="submit">
           <!-- <i class="fa-brands fa-google"></i> -->
           <img src="../images/google.png" " height="20px" width="40px" alt=""
-          srcset=""> SignUp With Google
+          srcset=""> SignIn With Google
         </button>
-        <p>Already have an account? <a href="../pages/login.html" style="color: #3FA2F6; border: none;">Sign in</a></p>
+        <p>You don't have an account? <a href="../pages/signUp.html" style="color: #3FA2F6; border: none;">Sign Up</a></p>
     </div>
     </div>
   </body>
