--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -22,7 +22,7 @@
   <body>
     <div class="header">
       <div>
-        <h1>Mini <span style="color: #3fa2f6">Mart</span></h1>
+        <h1>TREND <span style="color: #3fa2f6">RISEBLOG</span></h1>
       </div>
 
       <div>
@@ -101,7 +101,7 @@
       </div>
     </div>
 
-    <script type="module" src="../firebase.js"></script>
-    <script type="module" src="../app.js"></script>
+    <script type="module" src="../scripts/firebase.js"></script>
+    <script type="module" src="../scripts/dashboard.js"></script>
   </body>
 </html>
