--- a/pages/login.html
+++ b/pages/login.html
@@ -26,10 +26,10 @@
         <div class="heading_Sign">
           <h1>SIGN IN</h1>
         </div>
-        <input type="text" placeholder="Enter Your Name" />
-        <input type="email" placeholder="Enter Your Email" />
-        <input type="password" placeholder="Enter Your Password" />
-        <button class="my_btn" type="submit">
+        <input type="text" id="loginName" placeholder="Enter Your Name" />
+        <input type="email" id="loginemail" placeholder="Enter Your Email" />
+        <input type="password" id="loginpassword" placeholder="Enter Your Password" />
+        <button class="my_btn" id="loginBtn" type="submit">
           <i class="fa-solid fa-right-to-bracket"></i>
           SignIn
         </button>
