--- a/pages/login.html
+++ b/pages/login.html
@@ -19,6 +19,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="../styles/index-var.css">
+  </link>
+  <script src="../scripts/index-var.js"></script>
   </head>
   <body>
     <div class="main_div">
@@ -33,7 +36,7 @@
           <i class="fa-solid fa-right-to-bracket"></i>
           SignIn
         </button>
-        <button class="my_btn1" type="submit">
+        <button class="my_btn1" id="loginwithGoogle" type="submit">
           <!-- <i class="fa-brands fa-google"></i> -->
           <img src="../images/google.png" " height="20px" width="40px" alt=""
           srcset=""> SignIn With Google
@@ -41,5 +44,7 @@
         <p>You don't have an account? <a href="../pages/signUp.html" style="color: #3FA2F6; border: none;">Sign Up</a></p>
     </div>
     </div>
+
+    <script type="module" src="../scripts/loginSignup.js"></script>
   </body>
 </html>
