--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -1,107 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="../style.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
 
-    
-  </head>
-  <body>
-    <div class="header">
-      <div>
-        <h1>TREND <span style="color: #3fa2f6">RISEBLOG</span></h1>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="../style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="../styles/index-var.css">
+  </link>
+  <script src="../scripts/index-var.js"></script>
 
-      <div>
-        <button class="btn">Home</button>
-        <button
-          class="btn"
-          data-bs-toggle="modal"
-          data-bs-target="#exampleModal"
-        >
-          Add Products
-        </button>
-      </div>
+
+</head>
+
+<body>
+  <div class="header">
+    <div>
+      <h1>TREND <span style="color: #3fa2f6">RISEBLOG</span></h1>
     </div>
 
-    <div id="cardContainer" class="post_container"></div>
+    <div>
+      <button class="btn"><a href="#" style="color: black; text-decoration: none;" >Blogs</a></button>
+      <button class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        Add Your Blog
+      </button>
+      <button class="btn" id="signoutBtn">Sign Out</button>
+    </div>
+  </div>
 
-    <!-- Button trigger modal -->
+  <div id="cardContainer" class="post_container"></div>
 
-    <!-- Modal -->
-    <div
-      class="modal fade"
-      id="exampleModal"
-      tabindex="-1"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">Add Product</h1>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <input
-              type="text"
-              class="inputDiv"
-              placeholder="Enter Your Tittle"
-              id="tittle"
-            />
-            <br />
-            <input
-              type="text"
-              class="inputDiv"
-              placeholder="Enter Your Discriptionn"
-              id="discription"
-            /><br />
-            <input
-              type="file"
-              accept="image/*"
-              class="inputDiv"
-              id="inputFile"
-            />
-          </div>
-          <div id="loader" class="loader"></div>
-          <div>
-            <img src="" class="imageDiv" id="showImage" />
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Close
-            </button>
-            <button type="button" id="addBtn" class="btn btn-primary">
-              Add
-            </button>
-          </div>
+  <!-- Button trigger modal -->
+
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel"> Add Your Blog</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <input type="text" class="inputDiv" placeholder="Enter Your Tittle" id="tittle" />
+          <br />
+          <input type="text" class="inputDiv" placeholder="Enter Your Discriptionn" id="discription" /><br />
+          <input type="file" accept="image/*" class="inputDiv" id="inputFile" />
+        </div>
+        <div id="loader" class="loader"></div>
+        <div>
+          <img src="" class="imageDiv" id="showImage" />
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+            Close
+          </button>
+          <button type="button" id="addBtn" class="btn btn-primary">
+            Add
+          </button>
         </div>
       </div>
     </div>
+  </div>
 
-    <script type="module" src="../scripts/firebase.js"></script>
-    <script type="module" src="../scripts/dashboard.js"></script>
-  </body>
+  <script type="module" src="../scripts/loginSignup.js"></script>
+  <script type="module" src="../scripts/firebase.js"></script>
+  <script type="module" src="../scripts/dashboard.js"></script>
+</body>
+
 </html>
